add swagger for update comment post
