# storage/api-docs/api-docs.json
@@ -26,7 +26,6 @@
                     }
                 ],
                 "requestBody": {
-                    "description": "Request body",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -255,25 +254,6 @@
                 ]
             }
         },
-        "/api/admin/bookings": {
-            "get": {
-                "tags": [
-                    "Show Bookings"
-                ],
-                "summary": "Display all bookings from database",
-                "operationId": "e02b626135501ab4454bdf20f953d839",
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/admin/comments": {
             "get": {
                 "tags": [
@@ -372,6 +352,59 @@
                     },
                     "500": {
                         "description": "Internal server error. Failed to create the comment post."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/comments/update/{id}": {
+            "post": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Update a comment post by ID",
+                "description": "Update a comment post by its ID",
+                "operationId": "d00fd47499ba53fa16601b9f881e5541",
+                "requestBody": {
+                    "description": "Request body",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "content",
+                                    "status"
+                                ],
+                                "properties": {
+                                    "content": {
+                                        "description": "Content of the comment post",
+                                        "type": "string",
+                                        "example": "Updated comment content"
+                                    },
+                                    "status": {
+                                        "description": "Status of the comment post",
+                                        "type": "integer",
+                                        "example": 1
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Validation error. Invalid input data."
+                    },
+                    "404": {
+                        "description": "Not found. The comment post with the specified ID does not exist."
+                    },
+                    "500": {
+                        "description": "Internal server error. Failed to update the comment post."
                     }
                 },
                 "security": [
